terraform/1_vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name        = "${var.prefix}-vpc-${var.region}"
    environment = "Dev"
  }
}
